Update to core-img 4.8.0 and upgrade tests to JUnits 5