@@ -9,23 +9,22 @@
  */
 package org.weasis.dicom;
 
-import java.util.Arrays;
+import java.util.List;
 import org.dcm4che3.data.Attributes;
 import org.dcm4che3.data.Tag;
 import org.dcm4che3.data.VR;
 import org.dcm4che3.net.Status;
-import org.hamcrest.MatcherAssert;
-import org.hamcrest.core.IsEqual;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
 import org.weasis.dicom.op.CGetForward;
 import org.weasis.dicom.param.*;
 
-public class CGetForwardNetTest {
+@DisplayName("DICOM C-GET forward")
+class CGetForwardNetTest {
 
   @Test
-  public void testProcess() {
-
+  void testProcess() {
     DicomProgress progress = new DicomProgress();
     progress.addProgressListener(
         progress1 -> {
@@ -42,30 +41,25 @@ public class CGetForwardNetTest {
             System.out.println("Last file has failed:" + progress1.getProcessedFile());
           }
         });
-
     AdvancedParams params = new AdvancedParams();
     ConnectOptions connectOptions = new ConnectOptions();
     connectOptions.setConnectTimeout(3000);
     connectOptions.setAcceptTimeout(5000);
     params.setConnectOptions(connectOptions);
-
     DicomNode calling = new DicomNode("WEASIS-SCU");
-    DicomNode called = new DicomNode("DICOMSERVER", "dicomserver.co.uk", 11112);
+    DicomNode called = new DicomNode("DICOMSERVER", "www.dicomserver.co.uk", 104);
     DicomNode destination = new DicomNode("DCM4CHEE", "localhost", 11112);
     String studyUID = "1.2.528.1.1001.100.2.3865.6101.93503564261.20070711142700372";
-
     Attributes attrs = new Attributes();
     attrs.setString(Tag.PatientName, VR.PN, "Override^Patient^Name");
     attrs.setString(Tag.PatientID, VR.LO, "ModifiedPatientID");
     DefaultAttributeEditor editor = new DefaultAttributeEditor(true, attrs);
-    CstoreParams cstoreParams = new CstoreParams(Arrays.asList(editor), false, null);
-
+    CstoreParams cstoreParams = new CstoreParams(List.of(editor), false, null);
     DicomState state =
         CGetForward.processStudy(
             params, params, calling, called, destination, progress, studyUID, cstoreParams);
     // Should never happen
-    Assert.assertNotNull(state);
-
+    Assertions.assertNotNull(state);
     System.out.println("DICOM Status:" + state.getStatus());
     System.out.println(state.getMessage());
     System.out.println(
@@ -75,10 +69,8 @@ public class CGetForwardNetTest {
     System.out.println("NumberOfFailedSuboperations:" + progress.getNumberOfFailedSuboperations());
     System.out.println(
         "NumberOfWarningSuboperations:" + progress.getNumberOfWarningSuboperations());
-
     // see org.dcm4che3.net.Status
-    // See server log at http://dicomserver.co.uk/logs/
-    MatcherAssert.assertThat(
-        state.getMessage(), state.getStatus(), IsEqual.equalTo(Status.Success));
+    // See server log at https://dicomserver.co.uk/logs/
+    Assertions.assertEquals(Status.Success, state.getStatus(), state.getMessage());
   }
 }
